# defy-larry

./: Makefile  README.md  pyproject.toml
src/defy_larry/: __init__.py  keyboard.py  kmeans.py
tests/: __init__.py  lib.py  test_keyboard.py  test_plugin.py
